<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sensor Display</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="gravity">Gravity</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="light">Light</string>
    <string name="linear_acceleration">Linear Acceleration</string>
    <string name="magnetic_field">Magnetic Field</string>
    <string name="orientation">Orientation</string>
    <string name="other">Other</string>
    <string name="pressure">Pressure</string>
    <string name="proximity">Proximity</string>
    <string name="rotation_vector">Rotation Vector</string>
    <string name="temperature">Temperature</string>
    <string name="no_support">Selected sensor is not supported on this device!</string>
    <string name="ok">Ok</string>
    <string name="xaxis_gyro_lb">X-axis (radians/s):</string>
    <string name="yaxis_gyro_lb">Y-axis (radians/s):</string>
    <string name="zaxis_gyro_lb">Z-axis (radians/s):</string>
    <string name="xaxis_accel_lb">X-axis (m/s²):</string>
    <string name="yaxis_accel_lb">Y-axis (m/s²):</string>
    <string name="zaxis_accel_lb">Z-axis (m/s²):</string>
    <string name="force_accel_lb">Force (m/s²):</string>
    <string name="xaxis_mag_lb">X-axis (µT)</string>
    <string name="yaxis_mag_lb">Y-axis (µT):</string>
    <string name="zaxis_mag_lb">Z-axis (µT):</string>
    <string name="xaxis_lb">X-axis:</string>
    <string name="yaxis_lb">Y-axis:</string>
    <string name="zaxis_lb">Z-axis:</string>
    <string name="force_lb">Force:</string>
    <string name="sensor_name_lb">Name:</string>
 	<string name="sensor_vendor_lb">Vendor:</string>
 	<string name="sensor_version_lb">Version:</string>
	<string name="sensor_max_range_lb">Max Range:</string>
	<string name="sensor_min_delay_lb">Min Delay:</string>
	<string name="sensor_resolution_lb">Resolution:</string>
	<string name="sensor_power_lb">Power:</string>
	<string name="light_level_lb">Light Level (lux):</string>
	<string name="proximity_lb">Proximity (cm):</string>
	<string name="rotation_lb">Rotation Angle:</string>
	<string name="azimuth_lb">Azimuth:</string>
	<string name="pitch_lb">Pitch:</string>
	<string name="roll_lb">Roll:</string>
	<string name="temp_lb">Degrees (Celsius):</string>
	<string name="x_rot_lb">X-axis (x*sin(θ/2)):</string>
	<string name="y_rot_lb">Y-axis (y*sin(θ/2)):</string>
	<string name="z_rot_lb">Z-axis (z*sin(θ/2)):</string>
	<string name="f_rot_lb">cos(θ/2):</string>
	<string name="temperature_lb">Temperature:</string>
	<string name="pressure_lb">Pressure:</string>
	<string name="sample_delay">Sensor Sample Delay (ms)</string>
	<string name="save_max">Save maximum force:</string>
	<string name="save">Save</string>
	<string name="clear">Clear</string>
</resources>
