<?xml version="1.0" encoding="utf-8"?>

 
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.asynkronos.android.sensordisplay"
	android:id="@+id/scrollview" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    android:fillViewport="true" > 

<LinearLayout 
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/app_name"
		style="@style/text_title_wh" />

	<Button android:id="@+id/accelerometer_button" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="1"
		android:text="@string/accelerometer" style="@style/button_wh" android:onClick="clickButton" />
		
	<Button android:id="@+id/gravity_button" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="1"
		android:text="@string/gravity" style="@style/button_wh" android:onClick="clickButton"/>
		
	<Button android:id="@+id/gyroscope_button" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="1"
		android:text="@string/gyroscope" style="@style/button_wh" android:onClick="clickButton"/>
		
	<Button android:id="@+id/light_button" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="1"
		android:text="@string/light" style="@style/button_wh" android:onClick="clickButton"/>
		
	<Button android:id="@+id/linear_acceleration_button" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="1"
		android:text="@string/linear_acceleration" style="@style/button_wh" android:onClick="clickButton"/>
		
	<Button android:id="@+id/magnetic_field_button" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="1"
		android:text="@string/magnetic_field" style="@style/button_wh" android:onClick="clickButton"/>
		
	<Button android:id="@+id/orientation_button" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="1"
		android:text="@string/orientation" style="@style/button_wh" android:onClick="clickButton"/>

	<Button android:id="@+id/pressure_button" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="1"
		android:text="@string/pressure" style="@style/button_wh" android:onClick="clickButton"/>
		
	<Button android:id="@+id/proximity_button" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="1"
		android:text="@string/proximity" style="@style/button_wh" android:onClick="clickButton"/>
		
	<Button android:id="@+id/rotation_vector_button" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="1"
		android:text="@string/rotation_vector" style="@style/button_wh" android:onClick="clickButton"/>
		
	<Button android:id="@+id/temperature_button" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="1"
		android:text="@string/temperature" style="@style/button_wh" android:onClick="clickButton"/>

</LinearLayout>
</ScrollView>