<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res/com.asynkronos.android.sensordisplay"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<TextView android:id="@+id/sensor_title" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text=""
		style="@style/text_title_wh" />
	<TextView  android:id="@+id/not_supported" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/no_support"
		style="@style/readout_ind" android:visibility="gone"/>
		
	<TableLayout  android:id="@+id/table" 
		android:orientation="vertical"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:shrinkColumns="1"
		android:stretchColumns="1"
		>

		<TableRow android:paddingBottom="2dp">
			<TextView android:layout_width="fill_parent"
				android:layout_height="fill_parent" 
				android:text="@string/sensor_name_lb"
				style="@style/info_ind" />
			<TextView android:id="@+id/sensor_name" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				style="@style/info"
				android:text="" />
		</TableRow>
  
		<TableRow android:paddingBottom="2dp">
			<TextView android:layout_width="fill_parent"
				android:layout_height="fill_parent" 
				android:text="@string/sensor_vendor_lb"
				style="@style/info_ind" />
			<TextView android:id="@+id/sensor_vendor" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				style="@style/info"
				android:text="" />
		</TableRow>

		<TableRow android:paddingBottom="2dp">
			<TextView android:layout_width="fill_parent"
				android:layout_height="fill_parent" 
				android:text="@string/sensor_version_lb"
				style="@style/info_ind" />
			<TextView android:id="@+id/sensor_version" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				style="@style/info"
				android:text="" />
		</TableRow>

		<TableRow android:paddingBottom="2dp">
			<TextView android:layout_width="fill_parent"
				android:layout_height="fill_parent" 
				android:text="@string/sensor_power_lb"
				style="@style/info_ind" />
			<TextView android:id="@+id/sensor_power" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				style="@style/info"
				android:text="" />
		</TableRow>
		
		<TableRow android:paddingBottom="2dp">
			<TextView android:layout_width="fill_parent"
				android:layout_height="fill_parent" 
				android:text="@string/sensor_resolution_lb"
				style="@style/info_ind" />
			<TextView android:id="@+id/sensor_resolution" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				style="@style/info"
				android:text="" />
		</TableRow>
		
		<TableRow android:paddingBottom="2dp">
			<TextView android:layout_width="fill_parent"
				android:layout_height="fill_parent" 
				android:text="@string/sensor_max_range_lb"
				style="@style/info_ind" />
			<TextView android:id="@+id/sensor_max_range" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:width="0dip"
				style="@style/info"
				android:text="" />
		</TableRow>
	<!--  	
		<TableRow>
			<TextView android:layout_width="fill_parent"
				android:layout_height="fill_parent" 
				android:text="@string/sensor_min_delay_lb"
				style="@style/info_ind" />
			<TextView android:id="@+id/sensor_min_delay" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				style="@style/info"
				android:text="" />
		</TableRow>
		-->
		</TableLayout>

</LinearLayout>