<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res/com.asynkronos.android.sensordisplay"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<TextView  android:id="@+id/title" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text=""
		style="@style/text_title_wh" />
	<TextView  android:id="@+id/not_supported" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/no_support"
		style="@style/readout_ind" android:visibility="gone"/>
		
	<TableLayout android:id="@+id/table" android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:stretchColumns="0,1">

		<TableRow android:id="@+id/xrow" android:paddingBottom="2dp" android:visibility="gone">
			<TextView android:id="@+id/xlabel" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/xaxis_accel_lb"
				style="@style/readout_ind" />
			<TextView android:id="@+id/xaxis" android:layout_width="fill_parent"
				android:layout_height="wrap_content" style="@style/readout"
				android:text="" />
		</TableRow>

		<TableRow android:id="@+id/yrow" android:paddingBottom="2dp" android:visibility="gone">
			<TextView android:id="@+id/ylabel" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/yaxis_accel_lb"
				style="@style/readout_ind" />
			<TextView android:id="@+id/yaxis" android:layout_width="fill_parent"
				android:layout_height="wrap_content" style="@style/readout"
				android:text="" />
		</TableRow>

		<TableRow android:id="@+id/zrow" android:paddingBottom="2dp" android:visibility="gone">
			<TextView android:id="@+id/zlabel" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/zaxis_accel_lb"
				style="@style/readout_ind" />
			<TextView android:id="@+id/zaxis" android:layout_width="fill_parent"
				android:layout_height="wrap_content" style="@style/readout"
				android:text="" />
		</TableRow>
		
		<TableRow android:id="@+id/frow" android:paddingBottom="2dp" android:visibility="gone">
			<TextView android:id="@+id/flabel" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/force_accel_lb"
				style="@style/readout_ind" />
			<TextView android:id="@+id/force" android:layout_width="fill_parent"
				android:layout_height="wrap_content" style="@style/readout"
				android:text="" />
		</TableRow>
		</TableLayout>
		<LinearLayout android:id="@+id/slider_display" 
		android:orientation="vertical" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:visibility="gone">
		<TextView   android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:text="@string/sample_delay" style="@style/readout_ind"/>
	
		<com.asynkronos.android.sensordisplay.Slider
		  android:id="@+id/slider"
		  android:layout_width="fill_parent" 
		  android:layout_height="wrap_content" 
		  android:layout_below="@+id/table"
		  android:onClick="clickSlider"
		  app:max_value="1000"
		  app:min_value="0"
		  app:divide_in="4"	
		  app:current_value="200"
		  app:step="20.0"/>
		  </LinearLayout>
		  
		  <LinearLayout android:id="@+id/save_toggle_display" 
		  	android:orientation="horizontal"
		  	android:layout_width="fill_parent"
		  	android:layout_height="wrap_content" 
		  	android:visibility="gone">
		  <TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/save_max"
				style="@style/readout_ind" />
		  	<ToggleButton android:id="@+id/toggle" 
		  	android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"/>
		  </LinearLayout>
		  
		  <LinearLayout android:id="@+id/save_button_display" 
		  android:orientation="horizontal" 
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content"
		  android:visibility="gone">
		  <TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text=""
				style="@style/readout_ind" />
		  	<Button android:id="@+id/save" 
		  	android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		  	android:text="@string/save"
		  	android:onClick="clickSaveButton"/>
		  </LinearLayout>

</LinearLayout>